selector por clase y ID

--- a/index.html
+++ b/index.html
@@ -48,11 +48,18 @@
         
         .dropdown:hover .dropbtn {background-color: #3e8e41;}
        
-        </style>
+        </style>git push -u origin main
     <title>Curso Python FrameWork</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 style="background-color:DodgerBlue;text-align:center">Bienvenidos a tu portal</h1>
+    <h1>Header 1</h1>
+    <h2>Header 2</h2>
+    <h3>Header 3</h3>
+    <h4>Header 4</h4>
+    <h5>Header 5</h5>
+    <h6>Header 6</h6>
     <table>
         <tr>
             <td>
@@ -71,14 +78,18 @@
             </td>
         </tr>
     </table>
-    <p>Esto es el
+    <p class="texto">Esto es el
        web de 
        <br>
-       josefino</p>
+       josefino
+       <div>
+          <h3>Esto es un h3</h3>
+       </div>
+      </p>
        <!-- Listas no ordenadas -->
         <ul>
             <li>Tomate</li>
-            <li>Cebolla</li>
+            <li id="orion">Cebolla</li>
             <li>Pimenton</li>
         </ul>
         <!-- Listas ordenadas -->
